--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6805,6 +6805,12 @@ spec:
                       run timeout, set this value to -1.
                     format: int32
                     type: integer
+                  serviceAccount:
+                    description: ServiceAccount to use by the DevWorkspace operator
+                      when starting the workspaces.
+                    maxLength: 63
+                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
+                    type: string
                   storage:
                     default:
                       pvcStrategy: per-user
