--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.57.0-736.next
+  name: eclipse-che.v7.58.0-737.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -681,6 +681,7 @@ spec:
               resources:
                 - events
               verbs:
+                - list
                 - watch
             - apiGroups:
                 - apps
@@ -1232,7 +1233,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.57.0-736.next
+  version: 7.58.0-737.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
