--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,17 +20,17 @@ on:
       - main
 jobs:
   coverage-report:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v3
       - name: Set up Go 1.18
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: 1.18
       - name: Run unit tests
         run: make test
       - name: Build Codecov report
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3.1.1
         with:
           files: cover.out
