--- a/.github/workflows/minikube-test-helm.yaml
+++ b/.github/workflows/minikube-test-helm.yaml
@@ -14,10 +14,10 @@ name: Helm test
 on: pull_request
 jobs:
   helm-on-minikube:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout source code
-      uses: actions/checkout@v2.3.1
+      uses: actions/checkout@v3
     - name: Start minikube cluster
       id: run-minikube
       uses: che-incubator/setup-minikube-action@next
@@ -29,7 +29,7 @@ jobs:
       run: bash <(curl -sL https://www.eclipse.org/che/chectl/) --channel=next
     - name: Run tests
       run: /bin/bash build/scripts/minikube-tests/test-helm.sh
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       if: ${{ always() }}
       with:
         name: artifacts
