--- a/.github/workflows/try-in-web-ide.yaml
+++ b/.github/workflows/try-in-web-ide.yaml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   add-web-ide-link:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Web IDE Pull Request Check
         uses: redhat-actions/try-in-web-ide@v1
