--- a/bundle/stable/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/stable/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -6995,6 +6995,12 @@ spec:
                         run timeout, set this value to -1.
                       format: int32
                       type: integer
+                    serviceAccount:
+                      description: ServiceAccount to use by the DevWorkspace operator
+                        when starting the workspaces.
+                      maxLength: 63
+                      pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
+                      type: string
                     storage:
                       default:
                         pvcStrategy: per-user
