--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7040,13 +7040,15 @@ spec:
                           default: per-user
                           description: 'Persistent volume claim strategy for the Che
                             server. The supported strategies are: `per-user` (all
-                            workspaces PVCs in one volume) and ''per-workspace'' (each
-                            workspace is given its own individual PVC). For details,
-                            see https://github.com/eclipse/che/issues/21185.'
+                            workspaces PVCs in one volume), `per-workspace` (each
+                            workspace is given its own individual PVC) and `ephemeral`
+                            (non-persistent storage where local changes will be lost
+                            when the workspace is stopped.)'
                           enum:
                             - common
                             - per-user
                             - per-workspace
+                            - ephemeral
                           type: string
                       type: object
                     tolerations:
