Update Ubuntu to 22.04 specifically
Signed-off-by: sdawley <sdawley@redhat.com>

--- a/.github/workflows/minikube-test-upgrade-stable-to-stable.yaml
+++ b/.github/workflows/minikube-test-upgrade-stable-to-stable.yaml
@@ -17,7 +17,7 @@ on:
      - 7.*
 jobs:
   upgrade-stable-to-stable-on-minikube:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
