--- a/.github/workflows/minikube-test-helm.yaml
+++ b/.github/workflows/minikube-test-helm.yaml
@@ -14,7 +14,7 @@ name: Helm test
 on: pull_request
 jobs:
   helm-on-minikube:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
