--- a/.github/workflows/minikube-test-operator.yaml
+++ b/.github/workflows/minikube-test-operator.yaml
@@ -14,7 +14,7 @@ name: Operator test
 on: pull_request
 jobs:
   operator-on-minikube:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
