--- a/.github/workflows/minikube-test-upgrade-stable-to-next.yaml
+++ b/.github/workflows/minikube-test-upgrade-stable-to-next.yaml
@@ -17,7 +17,7 @@ on:
       - main
 jobs:
   upgrade-stable-to-next-on-minikube:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
