--- a/.github/workflows/resources-check-main.yml
+++ b/.github/workflows/resources-check-main.yml
@@ -17,7 +17,7 @@ on:
       - main
 jobs:
   resources-validation:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
@@ -32,7 +32,7 @@ jobs:
         go install golang.org/x/tools/cmd/goimports@latest
         ${GITHUB_WORKSPACE}/build/scripts/check-resources.sh
   bundle-version-validation:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout source code
       uses: actions/checkout@v3
