--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7119,6 +7119,13 @@ spec:
                             label.'
                           type: string
                       type: object
+                    workspacesLimitPerUser:
+                      default: -1
+                      description: Total number of workspaces that a user can keep.
+                        The default value, `-1`, allows users to keep an unlimited
+                        number of workspaces.
+                      format: int32
+                      type: integer
                   type: object
                 gitServices:
                   description: A configuration that allows users to work with remote
