--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -7005,6 +7005,13 @@ spec:
                       maxLength: 63
                       pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                       type: string
+                    startTimeoutSeconds:
+                      description: StartTimeoutSeconds determines the maximum duration
+                        (in seconds) that a workspace can take to start before it
+                        is automatically failed. If not specified, the default value
+                        of 300 seconds (5 minutes) is used.
+                      format: int32
+                      type: integer
                     storage:
                       default:
                         pvcStrategy: per-user
