feat: configure workspace start timeout from Che Cluster CR (#1576)
* feat: configure workspace security context for container builds

Fix eclipse/che#21770

Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>

* feat: add spec.devEnvironments.startTimeout to Che Cluster CR

Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>

* chore: add tests for configuring DWO progressTimeout with Che Cluster CR

Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>

* chore: update deployment, bundle, CSV and CRD

Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>

* Update resources

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

Signed-off-by: Andrew Obuchowicz <aobuchow@redhat.com>
Signed-off-by: Anatolii Bazko <abazko@redhat.com>
Co-authored-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -5285,6 +5285,7 @@ spec:
                   disableContainerBuildCapabilities: true
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
+                  startTimeoutSeconds: 300
                   storage:
                     pvcStrategy: per-user
                 description: Development environment default configuration options.
@@ -6829,6 +6830,15 @@ spec:
                     maxLength: 63
                     pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                     type: string
+                  startTimeoutSeconds:
+                    default: 300
+                    description: StartTimeoutSeconds determines the maximum duration
+                      (in seconds) that a workspace can take to start before it is
+                      automatically failed. If not specified, the default value of
+                      300 seconds (5 minutes) is used.
+                    format: int32
+                    minimum: 1
+                    type: integer
                   storage:
                     default:
                       pvcStrategy: per-user
