--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -21,3 +21,5 @@ entries:
     replaces: eclipse-che.v7.56.0
   - name: eclipse-che.v7.58.0
     replaces: eclipse-che.v7.57.0
+  - name: eclipse-che.v7.59.0
+    replaces: eclipse-che.v7.58.0
