--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -6785,6 +6785,13 @@ spec:
                     default: true
                     description: Disables the container build capabilities.
                     type: boolean
+                  maxNumberOfWorkspacePerUser:
+                    default: -1
+                    description: Total number of workspaces, both stopped and running,
+                      that a user can keep. The default value, `-1`, allows users
+                      to keep an unlimited number of workspaces.
+                    format: int32
+                    type: integer
                   nodeSelector:
                     additionalProperties:
                       type: string
@@ -6927,13 +6934,6 @@ spec:
                           label.'
                         type: string
                     type: object
-                  workspacesLimitPerUser:
-                    default: -1
-                    description: Total number of workspaces that a user can keep.
-                      The default value, `-1`, allows users to keep an unlimited number
-                      of workspaces.
-                    format: int32
-                    type: integer
                 type: object
               gitServices:
                 description: A configuration that allows users to work with remote
