--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -5408,6 +5408,7 @@ spec:
                       autoProvision: true
                       template: <username>-che
                     disableContainerBuildCapabilities: true
+                    maxNumberOfWorkspacePerUser: -1
                     secondsOfInactivityBeforeIdling: 1800
                     secondsOfRunBeforeIdling: -1
                     startTimeoutSeconds: 300
