--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5269,6 +5269,7 @@ spec:
                     autoProvision: true
                     template: <username>-che
                   disableContainerBuildCapabilities: true
+                  maxNumberOfWorkspacePerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   startTimeoutSeconds: 300
