--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5269,8 +5269,6 @@ spec:
                     autoProvision: true
                     template: <username>-che
                   disableContainerBuildCapabilities: true
-                  maxNumberOfRunningWorkspacesPerUser: 1
-                  maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   startTimeoutSeconds: 300
@@ -6788,17 +6786,15 @@ spec:
                     description: Disables the container build capabilities.
                     type: boolean
                   maxNumberOfRunningWorkspacesPerUser:
-                    default: 1
                     description: The maximum number of running workspaces per user.
                     format: int32
-                    minimum: 1
+                    minimum: 0
                     type: integer
                   maxNumberOfWorkspacesPerUser:
-                    default: -1
                     description: Total number of workspaces, both stopped and running,
-                      that a user can keep. The default value, `-1`, allows users
-                      to keep an unlimited number of workspaces.
+                      that a user can keep.
                     format: int32
+                    minimum: 0
                     type: integer
                   nodeSelector:
                     additionalProperties:
