--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -4715,8 +4715,8 @@ spec:
                     description: DevWorkspace Operator configuration.
                     properties:
                       runningLimit:
-                        description: The maximum number of running workspaces per
-                          user.
+                        description: Deprecated in favor of `MaxNumberOfRunningWorkspacesPerUser`
+                          The maximum number of running workspaces per user.
                         type: string
                     type: object
                   devfileRegistry:
@@ -5269,6 +5269,7 @@ spec:
                     autoProvision: true
                     template: <username>-che
                   disableContainerBuildCapabilities: true
+                  maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   startTimeoutSeconds: 300
@@ -6785,6 +6786,20 @@ spec:
                     default: true
                     description: Disables the container build capabilities.
                     type: boolean
+                  maxNumberOfRunningWorkspacesPerUser:
+                    description: The maximum number of running workspaces per user.
+                      The value, -1, allows users to run an unlimited number of workspaces.
+                    format: int64
+                    minimum: -1
+                    type: integer
+                  maxNumberOfWorkspacesPerUser:
+                    default: -1
+                    description: Total number of workspaces, both stopped and running,
+                      that a user can keep. The value, -1, allows users to keep an
+                      unlimited number of workspaces.
+                    format: int64
+                    minimum: -1
+                    type: integer
                   nodeSelector:
                     additionalProperties:
                       type: string
